--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,4 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
+    // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
     
@@ -20,7 +20,8 @@ allprojects {
     repositories {
         google()
         jcenter()
-        
+        maven{url 'https://jitpack.io'}
+
     }
 }
 
